# llm

./: .gitignore  LLM_Evaluation.ipynb  Story_Book_v2.ipynb  aged_care_crawler_langgraph.ipynb  chandler_park_primary_crawler.ipynb  pdf_qa.ipynb  pdf_qa_audio.ipynb  pyproject.toml  rmit_crawler.ipynb  telstra_support_crawler.ipynb  telstra_support_crawler_langgraph_v1.ipynb  url_Q&a.ipynb
.clinerules/: moltbook_rules.md
moltbook/: main.py  requirements.txt
moltbook/data/state/: processed_comments.json
moltbook/src/: __init__.py  gandalf_poster.py  response_generator.py  workflow_tasks.py
notebooks/: LLM_Evaluation.ipynb  pdf_qa.ipynb  rmit_crawler.ipynb  telstra_support_crawler.ipynb  url_Q&a.ipynb
